samples-cloud/kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    labels: {app: my-app}
    name: my-app
    namespace: production
spec:
    tls:
      - secretName: my-domain-com-tls
        hosts:
          - my-domain.com
    rules:
      - host: my-domain.com
        http:
            paths:
              - {backend: {serviceName: my-other-app, servicePort: 80}, path: /my-other-app}
              - {backend: {serviceName: my-app, servicePort: 80}}

      # handle other domains, but without tls
      - http:
            paths:
              - {backend: {serviceName: my-other-app, servicePort: 80}, path: /my-other-app}
              - {backend: {serviceName: my-app, servicePort: 80}}
